tests/ui/const-generics/generic_const_exprs/unevaluated-const-ice-119731.stderr
error[E0432]: unresolved import `v20::v13`
  --> $DIR/unevaluated-const-ice-119731.rs:42:15
   |
LL | pub use v20::{v13, v17};
   |               ^^^
   |               |
   |               no `v13` in `v20`
   |               help: a similar name exists in the module: `v11`

error[E0425]: cannot find value `v8` in this scope
  --> $DIR/unevaluated-const-ice-119731.rs:13:38
   |
LL |     const v0: [[usize; v4]; v4] = v6(v8);
   |                                      ^^ not found in this scope

error[E0412]: cannot find type `v18` in this scope
  --> $DIR/unevaluated-const-ice-119731.rs:23:31
   |
LL |     pub type v11 = [[usize; v4]; v4];
   |     --------------------------------- similarly named type alias `v11` defined here
...
LL |         pub const fn v21() -> v18 {}
   |                               ^^^ help: a type alias with a similar name exists: `v11`

error[E0412]: cannot find type `v18` in this scope
  --> $DIR/unevaluated-const-ice-119731.rs:35:31
   |
LL |     pub type v11 = [[usize; v4]; v4];
   |     --------------------------------- similarly named type alias `v11` defined here
...
LL |         pub const fn v21() -> v18 {
   |                               ^^^ help: a type alias with a similar name exists: `v11`

error[E0422]: cannot find struct, variant or union type `v18` in this scope
  --> $DIR/unevaluated-const-ice-119731.rs:37:13
   |
LL |     pub type v11 = [[usize; v4]; v4];
   |     --------------------------------- similarly named type alias `v11` defined here
...
LL |             v18 { _p: () }
   |             ^^^ help: a type alias with a similar name exists: `v11`

warning: type `v11` should have an upper camel case name
  --> $DIR/unevaluated-const-ice-119731.rs:9:14
   |
LL |     pub type v11 = [[usize; v4]; v4];
   |              ^^^ help: convert the identifier to upper camel case (notice the capitalization): `V11`
   |
   = note: `#[warn(non_camel_case_types)]` on by default

warning: type `v17` should have an upper camel case name
  --> $DIR/unevaluated-const-ice-119731.rs:16:16
   |
LL |     pub struct v17<const v10: usize, const v7: v11> {
   |                ^^^ help: convert the identifier to upper camel case (notice the capitalization): `V17`

error: `[[usize; v4]; v4]` is forbidden as the type of a const generic parameter
  --> $DIR/unevaluated-const-ice-119731.rs:16:48
   |
LL |     pub struct v17<const v10: usize, const v7: v11> {
   |                                                ^^^
   |
   = note: the only supported types are integers, `bool`, and `char`
help: add `#![feature(adt_const_params)]` to the crate attributes to enable more complex and user defined types
   |
LL + #![feature(adt_const_params)]
   |

error[E0425]: cannot find function `v6` in this scope
  --> $DIR/unevaluated-const-ice-119731.rs:13:35
   |
LL |     const v0: [[usize; v4]; v4] = v6(v8);
   |                                   ^^ not found in this scope

error: maximum number of nodes exceeded in constant v20::v17::<v10, v2>::{constant#0}
  --> $DIR/unevaluated-const-ice-119731.rs:28:37
   |
LL |     impl<const v10: usize> v17<v10, v2> {
   |                                     ^^

error: maximum number of nodes exceeded in constant v20::v17::<v10, v2>::{constant#0}
  --> $DIR/unevaluated-const-ice-119731.rs:28:37
   |
LL |     impl<const v10: usize> v17<v10, v2> {
   |                                     ^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: maximum number of nodes exceeded in constant v20::v17::<v10, v2>::{constant#0}
  --> $DIR/unevaluated-const-ice-119731.rs:28:37
   |
LL |     impl<const v10: usize> v17<v10, v2> {
   |                                     ^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: maximum number of nodes exceeded in constant v20::v17::<v10, v2>::{constant#0}
  --> $DIR/unevaluated-const-ice-119731.rs:28:37
   |
LL |     impl<const v10: usize> v17<v10, v2> {
   |                                     ^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: maximum number of nodes exceeded in constant v20::v17::<v10, v2>::{constant#0}
  --> $DIR/unevaluated-const-ice-119731.rs:28:37
   |
LL |     impl<const v10: usize> v17<v10, v2> {
   |                                     ^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: maximum number of nodes exceeded in constant v20::v17::<v10, v2>::{constant#0}
  --> $DIR/unevaluated-const-ice-119731.rs:28:37
   |
LL |     impl<const v10: usize> v17<v10, v2> {
   |                                     ^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0592]: duplicate definitions with name `v21`
  --> $DIR/unevaluated-const-ice-119731.rs:23:9
   |
LL |         pub const fn v21() -> v18 {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `v21`
...
LL |         pub const fn v21() -> v18 {
   |         ------------------------- other definition for `v21`

error: aborting due to 14 previous errors; 2 warnings emitted

Some errors have detailed explanations: E0412, E0422, E0425, E0432, E0592.
For more information about an error, try `rustc --explain E0412`.
